fix search icon size on mobile

--- a/src/assets/scss/components/_blog-controls.scss
+++ b/src/assets/scss/components/_blog-controls.scss
@@ -15,6 +15,7 @@
     width: $blog-controls-search-width;
     background: transparent;
     border: 0;
+    padding: 0;
 
     .search-icon {
       fill: #fff;
@@ -64,5 +65,4 @@
       }
     }
   }
-
 }
